--- a/main.tex
+++ b/main.tex
@@ -1225,11 +1225,10 @@ The following observations are characteristic for this algorithm:
 
 \begin{table}[h]
   \centering
-  \begin{tabular}{ll}
+  \begin{tabular}{lr}
     SIM & 0.7 \\
     Number of jobs & 7615 \\
     Number of job types & 3306 \\
-    \hline
   \end{tabular}
   \caption{Cluster statistics.}
   \label{tab:bin_all:stats}
@@ -1238,18 +1237,18 @@ The following observations are characteristic for this algorithm:
 \begin{table}[h]
   \centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }}
-			coding                                                                                                 &  type    \\ 
+		\begin{tabular}{@{ }l@{ }|@{ }r@{ }}
+			Binary coding                                                                                    &  Type     \\ 
 			\hline
-			0:0:0:0:0:0:294:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0 & centroid\\
-			& \\
-			coding                                                                                                 & count    \\ 
+			0:0:0:0:0:0:294:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0:0:32:0:0:0:0:0:0:0:0:0:0 &  centroid \\ 
+			\multicolumn{2}{l}{}                                                                             \\ 
+			Binary coding                                                                                    &  Count    \\ 
 			\hline
-			0:0:0:0:0:0:359:96:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 & 95\\
-			0:0:0:0:0:0:295:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 & 62\\
-			0:0:0:0:0:0:0:0:0:0:0:0:4:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 & 47\\
-			0:0:0:0:0:0:359:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 & 44\\
-			0:0:0:0:0:6:6:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 & 40\\
+			0:0:0:0:0:0:359:96:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0   &  95       \\ 
+			0:0:0:0:0:0:295:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0    &  62       \\ 
+			0:0:0:0:0:0:0:0:0:0:0:0:4:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0  &  47       \\ 
+			0:0:0:0:0:0:359:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0    &  44       \\ 
+			0:0:0:0:0:6:6:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0  &  40       \\ 
 		\end{tabular}
 	\end{tiny}
   \caption{Centroid and Top 5 job types.}
@@ -1289,18 +1288,18 @@ The following is characteristic for this algorithm:
 \begin{table}[h]
 	\centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }}
-			coding                                                                                                    & type     \\ 
+		\begin{tabular}{@{ }l@{ }|@{ }r@{ }}
+			Binary coding                                                                          &  Type     \\ 
 			\hline
-			272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272 & centroid \\
-			& \\
-			coding                                                                                                    & count    \\ 
+			272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272            &  centroid \\ 
+			\multicolumn{2}{l}{}                                                                   \\ 
 			\hline
-			272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272 & 528\\
-			272:272:272:272:272:406:286:272:272:272:272:272:272:272:272:272 & 96\\
-			272:272:272:272:272:279:31:272:272:272:272:272:272:272:272:272:272:272:272:272:272:272 & 53\\
-			272:272:272:272:272:272:272:272:272:272:272:279:319:272:272:272:272:272:272:272:272 & 52\\
-			272:272:272:272:272:279:319:272:272:272:272:272:272:272:272:272:272:272:272:272:272 & 50\\
+			Binary coding                                                                          &  Count    \\ 
+			272:272:272:272:272:278:286:272:272:272:272:272:272:272:272:272:272:272:272            &  528      \\ 
+			272:272:272:272:272:406:286:272:272:272:272:272:272:272:272:272                        &  96       \\ 
+			272:272:272:272:272:279:31:272:272:272:272:272:272:272:272:272:272:272:272:272:272:272 &  53       \\ 
+			272:272:272:272:272:272:272:272:272:272:272:279:319:272:272:272:272:272:272:272:272    &  52       \\ 
+			272:272:272:272:272:279:319:272:272:272:272:272:272:272:272:272:272:272:272:272:272    &  50       \\ 
 		\end{tabular}
 	\end{tiny}
   \caption{Centroid and Top 5 job types}
@@ -1347,11 +1346,12 @@ Cluster characteristics:
 \begin{table}[h]
 	\centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }@{ }l@{ }@{ }l@{ }}
+		\begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
+			\multicolumn{4}{@{ }l|@{ }}{Hexadecimal coding} & \\
 			md\_file\_create  & md\_file\_delete  & md\_mod           & read\_calls       & Type     \\ 
 			\hline
 			0:...:0           & 0:0:0:1:0:0:0:0:0 & 0:...:0           & 0:...:0           & centroid \\ 
-			                  &                   &                   &                   &          \\
+			\multicolumn{5}{l}{}\\
 			md\_file\_create  & md\_file\_delete  & md\_mod           & read\_calls       & Count    \\ 
 			\hline
 			0:...:0           & 0:0:0:0:0:0:1:0:0 & 0:...:0           & 0:...:0           & 606      \\ 
@@ -1405,18 +1405,19 @@ Cluster characteristics:
 \begin{table}[h]
 	\centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }@{ }l@{ }}
-      md\_file\_delete & md\_mod   & md\_other & Type     \\ 
+		\begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
+      \multicolumn{3}{@{ }l|@{ }}{Hexadecimal coding} &            \\ 
+      md\_file\_delete     &  md\_mod   & md\_other & Type     \\ 
       \hline
-      0:\dots:0        & 0:0:1:0   & 0:0:1:0   & centroid \\ 
-                       &           &           &          \\ 
-      md\_file\_delete & md\_mod   & md\_other & Count    \\ 
+      0:\dots:0            &  0:0:1:0   & 0:0:1:0   & centroid \\ 
+      \multicolumn{4}{l}{} \\ 
+      md\_file\_delete     &  md\_mod   & md\_other & Count    \\ 
       \hline
-      0:\dots:0        & 0:\dots:0 & 0:0:1:0   & 5010     \\ 
-      0:\dots:0        & 0:\dots:0 & 0:0:2:0   & 1963     \\ 
-      0:0:1:0          & 0:\dots:0 & 0:\dots:0 & 1099     \\ 
-      0:\dots:0        & 0:\dots:0 & 0:1:0:0   & 911      \\ 
-      0:0:1:0          & 0:0:1:0   & 0:\dots:0 & 676      \\ 
+      0:\dots:0            &  0:\dots:0 & 0:0:1:0   & 5,010    \\ 
+      0:\dots:0            &  0:\dots:0 & 0:0:2:0   & 1,963    \\ 
+      0:0:1:0              &  0:\dots:0 & 0:\dots:0 & 1,099    \\ 
+      0:\dots:0            &  0:\dots:0 & 0:1:0:0   & 911      \\ 
+      0:0:1:0              &  0:0:1:0   & 0:\dots:0 & 676      \\ 
 		\end{tabular}
 	\end{tiny}
   \caption{Centroid and Top 5 job types.}
@@ -1468,18 +1469,19 @@ Cluster characteristics:
 \begin{table}[h]
   \centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }}
-			  md\_file\_delete & md\_mod     & Type     \\ 
-			  \hline
-			  4:0:0:0:0:0      & 4:0:0:0:0:0 & centroid \\ 
-			                   &             &          \\ 
-			  md\_file\_delete & md\_mod     & Count    \\ 
-			  \hline
-			  4                & 4           & 2329     \\ 
-			  4:0:0:0:0:0      & 4:0:0:0:0:0 & 1773     \\ 
-			  4:0              & 4:0         & 224      \\ 
-			  2                & 4           & 65       \\ 
-			  0:4              & 0:4         & 57       \\ 
+		\begin{tabular}{@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
+			\multicolumn{2}{@{ }l|@{ }}{Hexadecimal coding} &              \\ 
+			md\_file\_delete     &  md\_mod     & Type     \\ 
+			\hline
+			4:0:0:0:0:0          &  4:0:0:0:0:0 & centroid \\ 
+			\multicolumn{3}{l}{} \\ 
+			md\_file\_delete     &  md\_mod     & Count    \\ 
+			\hline
+			4                    &  4           & 2329     \\ 
+			4:0:0:0:0:0          &  4:0:0:0:0:0 & 1773     \\ 
+			4:0                  &  4:0         & 224      \\ 
+			2                    &  4           & 65       \\ 
+			0:4                  &  0:4         & 57       \\ 
 		\end{tabular}
 	\end{tiny}
 	\caption{Centroid and Top 5 job types.}
@@ -1527,19 +1529,19 @@ Information related to the cluster is in \Cref{tab:use_case:bin_all:stats}, \Cre
 \begin{table}[h]
   \centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }}
-			coding                                                                                                 &  name    \\ 
+		\begin{tabular}{@{ }l@{ }|@{ }r@{ }}
+			Binary coding                                                                                          &  Type     \\ 
 			\hline
-			192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64 & job      \\ 
-			192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        & centroid \\ 
-			& \\
-			coding                                                                                                 & count    \\ 
+			192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64 &  job      \\ 
+			192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        &  centroid \\ 
+			\multicolumn{2}{l}{}                                                                                   \\ 
+			coding                                                                                                 &  Count    \\ 
 			\hline
-			192:192:192:192:192:454:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        & 5        \\ 
-			192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        & 3        \\ 
-			192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        & 3        \\ 
-			192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192            & 2        \\ 
-			228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192                                & 2        \\ 
+			192:192:192:192:192:454:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        &  5        \\ 
+			192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192        &  3        \\ 
+			192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192        &  3        \\ 
+			192:192:192:192:192:192:192:192:192:192:192:454:230:192:192:192:192:192:192:192:192:192:192            &  2        \\ 
+			228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192                                &  2        \\ 
 		\end{tabular}
 	\end{tiny}
 	\caption{Job, centroid and Top 5 job types.}
@@ -1571,19 +1573,19 @@ Information related to the cluster is in \Cref{tab:use_case:bin_aggzeros:stats},
 \begin{table}[h]
 	\centering
 	\begin{tiny}
-		\begin{tabular}{@{ }l@{ }@{ }l@{ }}
-			coding                                                                                                    & name     \\ 
+		\begin{tabular}{@{ }l@{ }|@{ }r@{ }}
+			Binary coding                                                                                             &  Type     \\ 
 			\hline
-			192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    & job      \\ 
-			511:238:192:510:192:224:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64        & centroid \\ 
-			& \\
-			coding                                                                                                    & count    \\ 
+			192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    &  job      \\ 
+			511:238:192:510:192:224:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64        &  centroid \\ 
+			\multicolumn{2}{l}{}                                                                                      \\ 
+			coding                                                                                                    &  Count    \\ 
 			\hline
-			0:224:192:192:192:192:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64          & 1        \\ 
-			192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    & 1        \\ 
-			192:192:193:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64               & 1        \\ 
-			192:193:193:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64:64     & 1        \\ 
-			207:463:225:495:246:224:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64:64 & 1        \\ 
+			0:224:192:192:192:192:228:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64          &  1        \\ 
+			192:192:192:192:192:192:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64    &  1        \\ 
+			192:192:193:196:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64               &  1        \\ 
+			192:193:193:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64:64     &  1        \\ 
+			207:463:225:495:246:224:198:192:192:192:192:192:192:192:192:192:192:192:192:192:192:192:64:64:64:64:64:64 &  1        \\ 
 		\end{tabular}
 	\end{tiny}
 	\caption{Job, centroid and Top 5 job types.}
@@ -1614,19 +1616,20 @@ Information related to the cluster is in \Cref{tab:use_case:hex_lev:stats}, \Cre
 
 \begin{table}[h]
   \begin{tiny}
-    \begin{tabular}{@{ }l@{ }@{ }l@{ }@{ }l@{ }}
-      md\_other                                            & read\_calls                                            & name    \\ 
+    \begin{tabular}{@{ }l@{ }@{ }l@{ }|@{ }r@{ }}
+			\multicolumn{2}{@{ }l|@{ }}{Hexadecimal coding} & \\
+      md\_other                                           &  read\_calls                                           & Type     \\ 
       \hline
-      0:\dots:0                                           & 3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
-      0:\dots:0                                           & 8:8:8:8:8:2:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\ 
-      && \\
-      md\_other                                            & read\_calls                                            & count    \\ 
+      0:\dots:0                                           &  3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
+      0:\dots:0                                           &  8:8:8:8:8:2:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\ 
+      \multicolumn{3}{l}{}                                \\ 
+      md\_other                                           &  read\_calls                                           & Count    \\ 
       \hline
-      0:\dots:0                                           & 0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
-      0:\dots:0                                           & 8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
-      0:0:0:4:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 & 0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
-      0:\dots:0                                           & 8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\ 
-      0:\dots:0                                           & 0:0:0:0:0:0:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 2        \\ 
+      0:\dots:0                                           &  0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
+      0:\dots:0                                           &  8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
+      0:0:0:4:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0 &  0:0:0:0:0:0:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
+      0:\dots:0                                           &  8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\ 
+      0:\dots:0                                           &  0:0:0:0:0:0:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 2        \\ 
     \end{tabular}
   \end{tiny}
   \caption{Job, centroid and Top 5 job types.}
@@ -1658,12 +1661,13 @@ Information related to the cluster is in \Cref{tab:use_case:hex_native:stats}, \
 \begin{table}[h]
   \centering
   \begin{tiny}
-    \begin{tabular}{@{ }l@{ }@{ }l@{ }}
+    \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
+			Hexadecimal coding & \\
       read\_calls                                           & Type     \\ 
 		  \hline	
       3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
       8:8:8:8:8:2:4:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & centroid \\ 
-     & \\ 
+			\multicolumn{2}{l}{}\\ 
       read\_calls                                           & Count    \\ 
 		  \hline	
       8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\ 
@@ -1708,14 +1712,15 @@ Mean value allow us to build simple algorithms
 \begin{table}[h]
   \centering
   \begin{tiny}
-    \begin{tabular}{@{ }l@{ }@{ }l@{ }}
+    \begin{tabular}{@{ }l@{ }|@{ }r@{ }}
+			Hexadecimal coding & \\
       read\_calls                                           & Type     \\ 
-      
+			\hline
       3:3:8:8:8:5:6:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & job      \\ 
       8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & centroid \\ 
-                                                            &          \\ 
+			\multicolumn{2}{l}{}\\
       read\_calls                                           & Count    \\ 
-      
+			\hline
       8:8:8:8:8:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 4        \\ 
       8:8:8:8:8:3:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8 & 3        \\ 
       7:7:7:7:7:2:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8:8   & 2        \\ 
